Added vote api
